<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            
            android:id="@+id/nav_category"
            android:title="@string/menu_category">
            <menu>
                <item
                    android:id="@+id/nav_science"
                    android:title="@string/science" />
                <item
                    android:id="@+id/nav_economic"
                    android:title="health" />
                <item
                    android:id="@+id/nav_sport"
                    android:title="@string/sport"/>
                <item
                    android:id="@+id/nav_politic"
                    android:title="business"/>


            </menu>


        </item>


        <item
            android:id="@+id/nac_About"
            android:title="@string/menu_About" />
    </group>
</menu>